virtual machines/ubuntu-minikube/Kubernetes/bookstack/bookstack-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookstack
  name: bookstack
  namespace: bookstack
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: bookstack
