virtual machines/ubuntu-minikube/Kubernetes/bookstack/bookstack-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack-in
  namespace: bookstack
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.11.12.0/24,192.168.192.0/24
spec:
  tls:
  - hosts:
    - bookstack.aleixohome.lan
    secretName: aleixohome-ssl
  rules:
  - host: bookstack.aleixohome.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 8080
